# legl-dev

./: .gitignore  .prettierignore  .prettierrc.toml  README.md  pyproject.toml  python-flake.yml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: poetry-publish.yml  python-flake.yml  python-package.yml  python-pytest.yml  release.yml
legl_dev/: command.py  main.py
legl_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
legl_dev/tests/: test_command.py  test_main.py
