[tool.poetry]
name = "legl-dev"
version = "1.0.0"
description = ""
authors = ["phil-bell <philhabell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
yaspin = "^1.3.0"
typer = "^0.3.2"
[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
legl-dev = "legl_dev.main:app"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
